major improvements for rotating keyboard

--- a/011_vanilla_projects/10_rotating_keyboard/index.html
+++ b/011_vanilla_projects/10_rotating_keyboard/index.html
@@ -44,7 +44,9 @@
       <div class="keyboard-container">
         <div class="keyboard">
           <div class="row">
-            <div class="btn"><i class="fas fa-arrow-circle-up"></i></div>
+            <div id="up" class="btn control up">
+              <i class="fas fa-arrow-circle-up"></i>
+            </div>
             <div class="btn">A</div>
             <div class="btn">B</div>
             <div class="btn">C</div>
@@ -55,10 +57,14 @@
             <div class="btn">_</div>
             <div class="btn"><</div>
             <div class="btn">></div>
-            <div class="btn"><i class="fas fa-arrow-circle-down"></i></div>
+            <div id="down" class="btn control down">
+              <i class="fas fa-arrow-circle-down"></i>
+            </div>
           </div>
           <div class="row">
-            <div class="btn"><i class="fas fa-arrow-circle-up"></i></div>
+            <div id="up" class="btn control up">
+              <i class="fas fa-arrow-circle-up"></i>
+            </div>
             <div class="btn">H</div>
             <div class="btn">I</div>
             <div class="btn">J</div>
@@ -69,10 +75,14 @@
             <div class="btn">_</div>
             <div class="btn"><</div>
             <div class="btn">></div>
-            <div class="btn"><i class="fas fa-arrow-circle-down"></i></div>
+            <div id="down" class="btn control down">
+              <i class="fas fa-arrow-circle-down"></i>
+            </div>
           </div>
           <div class="row">
-            <div class="btn"><i class="fas fa-arrow-circle-up"></i></div>
+            <div id="up" class="btn control up">
+              <i class="fas fa-arrow-circle-up"></i>
+            </div>
             <div class="btn">O</div>
             <div class="btn">P</div>
             <div class="btn">Q</div>
@@ -83,10 +93,14 @@
             <div class="btn">_</div>
             <div class="btn"><</div>
             <div class="btn">></div>
-            <div class="btn"><i class="fas fa-arrow-circle-down"></i></div>
+            <div id="down" class="btn control down">
+              <i class="fas fa-arrow-circle-down"></i>
+            </div>
           </div>
           <div class="row">
-            <div class="btn"><i class="fas fa-arrow-circle-up"></i></div>
+            <div id="up" class="btn control up">
+              <i class="fas fa-arrow-circle-up"></i>
+            </div>
             <div class="btn">V</div>
             <div class="btn">W</div>
             <div class="btn">X</div>
@@ -97,11 +111,15 @@
             <div class="btn">_</div>
             <div class="btn"><</div>
             <div class="btn">></div>
-            <div class="btn"><i class="fas fa-arrow-circle-down"></i></div>
+            <div id="down" class="btn control down">
+              <i class="fas fa-arrow-circle-down"></i>
+            </div>
           </div>
-          <div class="row selected">
-            <div class="btn"><i class="fas fa-arrow-circle-up"></i></div>
-            <div class="btn selected">1</div>
+          <div class="row">
+            <div id="up" class="btn control up">
+              <i class="fas fa-arrow-circle-up"></i>
+            </div>
+            <div class="btn">1</div>
             <div class="btn">2</div>
             <div class="btn">3</div>
             <div class="btn">4</div>
@@ -111,10 +129,14 @@
             <div class="btn">_</div>
             <div class="btn"><</div>
             <div class="btn">></div>
-            <div class="btn"><i class="fas fa-arrow-circle-down"></i></div>
+            <div id="down" class="btn control down">
+              <i class="fas fa-arrow-circle-down"></i>
+            </div>
           </div>
           <div class="row">
-            <div class="btn"><i class="fas fa-arrow-circle-up"></i></div>
+            <div id="up" class="btn control up">
+              <i class="fas fa-arrow-circle-up"></i>
+            </div>
             <div class="btn">8</div>
             <div class="btn">9</div>
             <div class="btn">0</div>
@@ -125,7 +147,9 @@
             <div class="btn">_</div>
             <div class="btn"><</div>
             <div class="btn">></div>
-            <div class="btn"><i class="fas fa-arrow-circle-down"></i></div>
+            <div id="down" class="btn control down">
+              <i class="fas fa-arrow-circle-down"></i>
+            </div>
           </div>
         </div>
       </div>
