rotating keyboard improved

--- a/011_vanilla_projects/10_rotating_keyboard/index.html
+++ b/011_vanilla_projects/10_rotating_keyboard/index.html
@@ -30,14 +30,7 @@
 
       <!-- Message -->
       <div class="text-field-container">
-        <div class="text-field">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque esse
-          nobis, dolores fugit odit placeat a, voluptates id officia
-          voluptatibus illo tenetur. Deleniti soluta quia, amet, vel ipsam unde
-          porro facilis, ullam hic nisi tempora provident. Mollitia recusandae
-          vero reiciendis inventore sapiente dolor, cupiditate architecto
-          consequuntur nulla fuga dolorum asperiores.
-        </div>
+        <div class="text-field"></div>
       </div>
 
       <!-- Keyboard -->
