--- a/014_node_crash/public/404.html
+++ b/014_node_crash/public/404.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Homepage</title>
+    <title>Page not found</title>
   </head>
   <body>
-    <h1>Welcome to the Homepage</h1>
+    <h1>Error 404! Page not found</h1>
   </body>
 </html>
