--- a/016_sass_crash/index.html
+++ b/016_sass_crash/index.html
@@ -10,7 +10,7 @@
     <header class="showcase">
       <div class="container">
         <nav>
-          <h1 class="logo">My Website</h1>
+          <h1 class="logo">Sass Crash Web</h1>
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
