--- a/004_dom_projects/03_task _list/index.html
+++ b/004_dom_projects/03_task _list/index.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/70db74410b.js"
       crossorigin="anonymous"
     ></script>
-    <title>Task List</title>
+    <title>Task List App</title>
   </head>
   <body>
     <div class="container">
