--- a/004_dom_projects/02_number_guesser/index.html
+++ b/004_dom_projects/02_number_guesser/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css"
     />
-    <title>Nummber Guesser</title>
+    <title>Number Guesser</title>
   </head>
   <body>
     <div class="container">
